--- a/src/CombatAnalysis.App/Views/BasicTemplateView.xaml
+++ b/src/CombatAnalysis.App/Views/BasicTemplateView.xaml
@@ -27,6 +27,7 @@
             <converters:TheNativeBoolToVisibilityConverter x:Key="BoolToVisibility" />
             <converters:TheNativeIntToXAMLBoolConverter x:Key="IntToXAMLBool" />
             <converters:TheNativeIntToXAMLExpressConverter x:Key="IntToXAMLBoolExpress" />
+            <converters:TheNativeIntToVisibilityConverter x:Key="IntToVisibility" />
         </Grid.Resources>
         
         <Border CornerRadius="0 20 20 0" Background="white" Grid.Column="2" Grid.ColumnSpan="2" Margin="-25 0 0 0 " Grid.RowSpan="2"/>
@@ -51,18 +52,11 @@
         <Border Grid.Column="1" Grid.RowSpan="2" CornerRadius="0 20 20 0"
                 Background="#6f50ff" Panel.ZIndex="1" Margin="-25 0 0 0">
             <Grid>
-                <!--<ComboBox VerticalAlignment="Top" Margin="34 25">
-                    <ComboBoxItem Content="Oleg"/>
-                    <ComboBoxItem Content="Dima"/>
-                    <ComboBoxItem Content="Kiril" IsSelected="True"/>
-                    <ComboBoxItem Content="Lera"/>
-                </ComboBox>-->
-
                 <StackPanel Margin="25 160 0 0">
                     <uc:MenuButton Title="Загрузка" Icon="HomeOutline" IsEnabled="{Binding Step, Converter={StaticResource IntToXAMLBoolExpress}, ConverterParameter='>,0'}" 
                                    IsActive="{Binding Step, Converter={StaticResource IntToXAMLBool}, ConverterParameter=0}" OnClick="{Binding UploadCombatsCommand}"/>
-                    <uc:MenuButton Title="Все бои" Icon="ChartTimelineVariantShimmer" IsEnabled="{Binding Step, Converter={StaticResource IntToXAMLBoolExpress}, ConverterParameter='>,1'}"
-                                   IsActive="{Binding Step, Converter={StaticResource IntToXAMLBool}, ConverterParameter=1}" OnClick="{Binding CombatsCommand}"/>
+                    <uc:MenuButton Title="Все бои" Icon="ChartTimelineVariantShimmer" IsEnabled="{Binding AllowStep, Converter={StaticResource IntToXAMLBoolExpress}, ConverterParameter='>,0'}"
+                                   IsActive="{Binding Step, Converter={StaticResource IntToXAMLBool}, ConverterParameter=1}" OnClick="{Binding GeneralAnalysisCommand}"/>
                     <uc:MenuButton Title="Бой" Icon="Details" IsEnabled="{Binding Step, Converter={StaticResource IntToXAMLBoolExpress}, ConverterParameter='>,2'}"
                                    IsActive="{Binding Step, Converter={StaticResource IntToXAMLBool}, ConverterParameter=2}" OnClick="{Binding CombatCommand}"/>
                     <uc:MenuButton Title="Урон" Icon="Sword" IsEnabled="{Binding Step, Converter={StaticResource IntToXAMLBool}, ConverterParameter=2}"
@@ -83,14 +77,6 @@
         </Border>
 
         <Grid Grid.Column="2" Grid.ColumnSpan="2" Margin="40 30">
-            <!--<Grid Width="500" HorizontalAlignment="Left">
-                <ComboBox HorizontalAlignment="Left" Margin="3 0 0 0" Panel.ZIndex="2">
-                    <ComboBoxItem Content="All category" IsSelected="True"/>
-                    <ComboBoxItem Content="Cars"/>
-                    <ComboBoxItem Content="Books"/>
-                    <ComboBoxItem Content="Homes"/>
-                </ComboBox>
-            </Grid>-->
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <Button Style="{StaticResource textBoxButton}">
                     <Icon:PackIconMaterial Kind="BellOutline" Foreground="#88878e"/>
@@ -106,12 +92,34 @@
                 </Button>
             </StackPanel>
         </Grid>
-        <StackPanel Grid.Column="2" Grid.Row="1" VerticalAlignment="Bottom" Orientation="Horizontal">
+        <StackPanel Grid.Column="2" Grid.Row="0" VerticalAlignment="Top" Orientation="Horizontal" Margin="25">
             <TextBlock Margin="5" FontSize="12" Text="Статус загрузки: "/>
-            <TextBlock Margin="5" FontSize="13" FontWeight="Bold" Foreground="Red" Text="Ошибка"
-                       Visibility="{Binding ServerStatusIsFailed, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
-            <TextBlock Margin="5" FontSize="13" FontWeight="Bold" Foreground="Green" Text="Успешно"
-                       Visibility="{Binding ServerStatusIsFailed, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:true}"/>
+            <TextBlock Margin="5" FontSize="13" FontWeight="Bold" Foreground="Gray" Text="Загрузка..."
+                       Visibility="{Binding ResponseStatus, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
+                <TextBlock.ToolTip>
+                    <ToolTip>
+                        Загрузка данных. Это может занять некоторое время. Вы можете продолжить работу с приложением. Статус загрузки будет отображаться в данной панели.
+                    </ToolTip>
+                </TextBlock.ToolTip>
+            </TextBlock>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Margin="5" FontSize="13" FontWeight="Bold" Foreground="Red" Text="Ошибка"
+                       Visibility="{Binding ResponseStatus, Converter={StaticResource IntToVisibility}, ConverterParameter=true:3}">
+                    <TextBlock.ToolTip>
+                        <ToolTip>
+                            Загрузка была завершена с ошибкой. Возможно проблемы с соединением или сервер временно не доступен. Вы можете продолжить работать с текущими данными, но они не будут сохранены.
+                        </ToolTip>
+                    </TextBlock.ToolTip>
+                </TextBlock>
+                <TextBlock Margin="5" FontSize="13" FontWeight="Bold" Foreground="Green" Text="Успешно"
+                       Visibility="{Binding ResponseStatus, Converter={StaticResource IntToVisibility}, ConverterParameter=true:2}">
+                    <TextBlock.ToolTip>
+                        <ToolTip>
+                            Все данные загружены успешно. Загруженные данные можно будет просмотреть повторно в люБое время.
+                        </ToolTip>
+                    </TextBlock.ToolTip>
+                </TextBlock>
+            </StackPanel>
         </StackPanel>
     </Grid>
 </views:MvxWpfView>
