--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/generalAnalysis.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/generalAnalysis.scss
@@ -1,6 +1,6 @@
 .general-analysis__container {
     .card {
-        width: auto;
+        width: 1000px;
         box-shadow: 10px 10px gray;
         margin: 25px;
 
@@ -8,6 +8,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            margin: 20px 10px 0 0;
 
             div {
                 display: flex;
@@ -61,6 +62,14 @@
         .list-group {
             display: flex;
             flex-direction: row;
+        }
+    }
+
+    &_navigate {
+        display: flex;
+
+        div, h3 {
+            margin: 5px;
         }
     }
 }
