--- a/src/CombatAnalysis.App/Views/LoginView.xaml
+++ b/src/CombatAnalysis.App/Views/LoginView.xaml
@@ -19,6 +19,10 @@
             <RowDefinition Height="0.5*" />
         </Grid.RowDefinitions>
 
+        <Grid.Resources>
+            <converters:TheNativeBoolToVisibilityConverter x:Key="BoolToVisibility" />
+        </Grid.Resources>
+        
         <ContentControl Grid.RowSpan="4" Grid.ColumnSpan="4" Content="{Binding BasicTemplate}">
             <ContentControl.Resources>
                 <DataTemplate DataType="{x:Type viewModels:BasicTemplateViewModel}">
@@ -31,8 +35,8 @@
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="0.5*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
+                <RowDefinition Height="1.2*" />
+                <RowDefinition Height="2*" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="0.5*" />
             </Grid.RowDefinitions>
@@ -50,9 +54,15 @@
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Пароль" FontSize="18" Margin="0 20"/>
                 <PasswordBox Name="password" VerticalAlignment="Center" HorizontalAlignment="Center" Height="25" Width="250"
                              PasswordChanged="PasswordBox_PasswordChanged"/>
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Вы указали не верно логин/пароль"
+                           FontSize="12" Foreground="Brown" Margin="0 10" Visibility="{Binding AuthIsFailed, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" Width="250" Height="80" TextWrapping="Wrap" Text="Не удалось получить ответ от сервера. Возможно проблемы с подключением или сервер временно не доступен"
+                           FontSize="12" Foreground="Brown" Margin="0 10" Visibility="{Binding ServerIsNotAvailable, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
             </StackPanel>
             <Button Grid.Column="1" Grid.Row="3" Height="30" Width="125" Content="Авторизация"
                     Command="{Binding LoginCommand}" />
         </Grid>
+        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="2" Height="30" Width="125" Content="Назад"
+                    Command="{Binding CancelCommand}" />
     </Grid>
 </views:MvxWpfView>
