--- a/src/CombatAnalysis.App/Views/BasicTemplateView.xaml
+++ b/src/CombatAnalysis.App/Views/BasicTemplateView.xaml
@@ -81,22 +81,20 @@
                 <StackPanel Margin="20 0">
                     <StackPanel Orientation="Horizontal" Visibility="{Binding IsAuth, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:true}">
                         <Button Style="{StaticResource userButton}" Margin="5">
-                            <Icon:PackIconMaterial Height="25" Width="25" Kind="AccountArrowLeftOutline" Foreground="#88878e">
-                                <Icon:PackIconMaterial.ToolTip>
-                                    <ToolTip>
-                                        Регистрация
-                                    </ToolTip>
-                                </Icon:PackIconMaterial.ToolTip>
-                            </Icon:PackIconMaterial>
+                            <Button.ToolTip>
+                                <ToolTip>
+                                    Регистрация
+                                </ToolTip>
+                            </Button.ToolTip>
+                            <Icon:PackIconMaterial Height="25" Width="25" Kind="AccountArrowLeftOutline" Foreground="#88878e"/>
                         </Button>
                         <Button Style="{StaticResource userButton}" Margin="5" mvx:Bi.nd="Command LoginCommand">
-                            <Icon:PackIconMaterial Height="25" Width="25" Kind="AccountReactivateOutline" Foreground="#88878e">
-                                <Icon:PackIconMaterial.ToolTip>
-                                    <ToolTip>
-                                        Авторизация
-                                    </ToolTip>
-                                </Icon:PackIconMaterial.ToolTip>
-                            </Icon:PackIconMaterial>
+                            <Button.ToolTip>
+                                <ToolTip>
+                                    Авторизация
+                                </ToolTip>
+                            </Button.ToolTip>
+                            <Icon:PackIconMaterial Height="25" Width="25" Kind="AccountReactivateOutline" Foreground="#88878e"/>
                         </Button>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Visibility="{Binding IsAuth, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}">
@@ -112,22 +110,20 @@
                             Visibility="{Binding IsAuth, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
                 </StackPanel>
                 <Button Style="{StaticResource textBoxButton}">
-                    <Icon:PackIconMaterial Kind="BellOutline" Foreground="#88878e">
-                        <Icon:PackIconMaterial.ToolTip>
-                            <ToolTip>
-                                Уведомления
-                            </ToolTip>
-                        </Icon:PackIconMaterial.ToolTip>
-                    </Icon:PackIconMaterial>
+                    <Button.ToolTip>
+                        <ToolTip>
+                            Уведомления
+                        </ToolTip>
+                    </Button.ToolTip>
+                    <Icon:PackIconMaterial Kind="BellOutline" Foreground="#88878e"/>
                 </Button>
                 <Button Style="{StaticResource textBoxButton}">
-                    <Icon:PackIconMaterial Kind="DotsVertical" Foreground="#88878e">
-                        <Icon:PackIconMaterial.ToolTip>
-                            <ToolTip>
-                                Меню
-                            </ToolTip>
-                        </Icon:PackIconMaterial.ToolTip>
-                    </Icon:PackIconMaterial>
+                    <Button.ToolTip>
+                        <ToolTip>
+                            Меню
+                        </ToolTip>
+                    </Button.ToolTip>
+                    <Icon:PackIconMaterial Kind="DotsVertical" Foreground="#88878e"/>
                 </Button>
                 <Button Style="{StaticResource textBoxButton}" mvx:Bi.nd="Command CloseCommand">
                     <Icon:PackIconMaterial Kind="Close" Foreground="Red" Width="25" Height="25"/>
