--- a/src/CombatAnalysis.App/Views/HealDoneDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/HealDoneDetailsView.xaml
@@ -74,9 +74,10 @@
         </StackPanel>
 
         <StackPanel Grid.Column="2" Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0 -20">
-            <CheckBox Margin="50 0" HorizontalAlignment="Center" VerticalAlignment="Center"
+            <CheckBox Margin="20 0" HorizontalAlignment="Center" VerticalAlignment="Center"
                    Content="Обратный порядок" FontSize="16" VerticalContentAlignment="Center" 
-                   FontWeight="SemiBold" IsChecked="{Binding IsCollectionReversed}"/>
+                   FontWeight="SemiBold" IsChecked="{Binding IsCollectionReversed}"
+                   Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=false:0}"/>
         </StackPanel>
 
         <ListBox Margin="20 30 20 45" Grid.Row="2" Grid.Column="2" Height="450"
@@ -121,7 +122,7 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <StackPanel Grid.Column="2" Grid.Row="2" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="0 75"
+        <StackPanel Grid.Column="2" Grid.Row="2" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="0 60"
                     Orientation="Horizontal">
             <TextBlock Margin="50 0" HorizontalAlignment="Center" VerticalAlignment="Center"
                    Text="Всего:" FontSize="16" TextAlignment="Center"/>
@@ -129,21 +130,21 @@
                    Text="{Binding TotalValue}" FontSize="18" TextAlignment="Center" FontWeight="Bold"/>
         </StackPanel>
         
-        <StackPanel Margin="20 -60" Grid.Row="3" Grid.Column="3" Orientation="Horizontal"
+        <StackPanel Margin="20 -50" Grid.Row="3" Grid.Column="3" Orientation="Horizontal"
                     Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
             <StackPanel>
-                <CheckBox Name="dependency" Margin="25 5" VerticalContentAlignment="Center" 
+                <CheckBox Name="dependency" Margin="0 5" VerticalContentAlignment="Center" 
                               Content="Показать крит. урон" IsChecked="{Binding IsShowCrit}" FontSize="14"
                               VerticalAlignment="Center" FontWeight="SemiBold" />
-                <CheckBox Margin="50 0" VerticalContentAlignment="Center" Content="Показать только крит. урон" FontSize="14" 
+                <CheckBox Margin="20 0" VerticalContentAlignment="Center" Content="Показать только крит. урон" FontSize="14" 
                               VerticalAlignment="Center" FontWeight="SemiBold" Visibility="{Binding ElementName=dependency, Path=IsChecked, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
                               IsChecked="{Binding IsShowOnlyCrit}"/>
             </StackPanel>
             <StackPanel>
-                <CheckBox Name="dependency1" Margin="25 5" VerticalContentAlignment="Center" 
+                <CheckBox Name="dependency1" Margin="50 5" VerticalContentAlignment="Center" 
                               Content="Показать оверхил" IsChecked="{Binding IsShowOverheal}" FontSize="14"
                               VerticalAlignment="Center" FontWeight="SemiBold" />
-                <CheckBox Margin="50 0" VerticalContentAlignment="Center" Content="Показать только оверхил" FontSize="14"
+                <CheckBox Margin="70 0" VerticalContentAlignment="Center" Content="Показать только оверхил" FontSize="14"
                               VerticalAlignment="Center" FontWeight="SemiBold" Visibility="{Binding ElementName=dependency1, Path=IsChecked, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
                               IsChecked="{Binding IsShowOnlyOverheal}"/>
             </StackPanel>
