--- a/src/CombatAnalysis.App/Views/ResourceRecoveryDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/ResourceRecoveryDetailsView.xaml
@@ -74,9 +74,10 @@
         </StackPanel>
 
         <StackPanel Grid.Column="2" Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0 -20">
-            <CheckBox Margin="50 0" HorizontalAlignment="Center" VerticalAlignment="Center"
+            <CheckBox Margin="20 0" HorizontalAlignment="Center" VerticalAlignment="Center"
                    Content="Обратный порядок" FontSize="16" VerticalContentAlignment="Center" 
-                   FontWeight="SemiBold" IsChecked="{Binding IsCollectionReversed}"/>
+                   FontWeight="SemiBold" IsChecked="{Binding IsCollectionReversed}"
+                   Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=false:0}"/>
         </StackPanel>
 
         <ListBox Margin="20 30 20 45" Grid.Row="2" Grid.Column="2" 
